08 versão de erro encontrado

--- a/05_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/05_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/test
+    username: Master
+    password: bvnmnk022648
+  jpa:
+    hibernate.ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: true
+    show-sql: true
