--- a/05_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/05_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
+    url: jdbc:mysql://localhost:3306/rest_with_spring_boot?useTimezone=true&serverTimezone=UTC
     username: Master
     password: bvnmnk022648
   jpa:
@@ -10,4 +10,4 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: true
-    show-sql: true
+    show-sql: false
