Testes executados com auxilio do Mockito

--- a/05_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/pom.xml
+++ b/05_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/pom.xml
@@ -29,6 +29,11 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>
@@ -71,6 +76,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 		</dependencies>
 
 	<build>
