--- a/12_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/pom.xml
+++ b/12_FirstStepsJavawithSpringBoot/rest-with-spring-boot-and-java/pom.xml
@@ -16,7 +16,6 @@
 	<properties>
 		<java.version>18</java.version>
 		<dozer.version>6.4.0</dozer.version>
-		<springdoc.version>2.0.0-M3</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -47,12 +46,6 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>${springdoc.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -128,7 +121,7 @@
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
